--- a/Hahn.ApplicationProcess.February2021.Frontend/src/app.html
+++ b/Hahn.ApplicationProcess.February2021.Frontend/src/app.html
@@ -1,3 +1,113 @@
 <template>
-  <h1>${message}</h1>
+
+  <div class="container">
+    <div class="py-5 text-center">
+      <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.6/assets/brand/bootstrap-solid.svg" alt=""
+        width="72" height="72">
+      <h2>Aurelia Application</h2>
+      <p class="lead">Built with ❤️ for Hahn-Softwareentwicklung By Hamza Khanzada</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 order-md-2 mb-4">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-muted">Your Assets</span>
+          <span class="badge badge-secondary badge-pill">${assetVM.assets.length}</span>
+        </h4>
+
+        <ul class="list-group mb-3" if.bind="assetVM.assets.length > 0">
+          <li class="list-group-item d-flex justify-content-between lh-condensed" repeat.for="asset of assetVM.assets">
+            <div>
+              <h6 class="my-0">${asset.assetName}</h6>
+              <small class="text-muted">${asset.department} (${asset.countryOfDepartment})</small>
+            </div>
+            <span class="text-muted">${asset.purchaseDate}</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-8 order-md-1">
+        <h4 class="mb-3">Create Asset</h4>
+        <form class="needs-validation" novalidate>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="firstName">Asset name</label>
+              <input type="text" class="form-control" id="txtAssetName" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                Valid first name is required.
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="ddlDepartment">Department</label>
+              <select class="custom-select d-block w-100" id="ddlDepartment" required>
+                <option value="">Choose...</option>
+                <option value="HQ">HQ</option>
+                <option value="Store1">Store1</option>
+                <option value="Store2">Store2</option>
+                <option value="Store3">Store3</option>
+                <option value="MaintenanceStation">MaintenanceStation</option>
+              </select>
+              <div class="invalid-feedback">
+                Valid first name is required.
+              </div>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="txtDepartmentEmail">Department Email</label>
+            <input type="text" class="form-control" id="txtDepartmentEmail" placeholder="you@example.com">
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="txtDepartmentCountry">Department Country</label>
+              <input type="text" class="form-control" id="txtDepartmentCountry" placeholder="Pakistan" required>
+              <div class="invalid-feedback">
+                Please select a valid country.
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="txtPurchaseDate">PurchaseDate</label>
+              <input type="date" class="form-control" id="txtPurchaseDate" placeholder="Purchase Date" required>
+              <div class="invalid-feedback">
+                Please provide a valid state.
+              </div>
+            </div>
+
+          </div>
+          <hr class="mb-4">
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="same-address">
+            <label class="custom-control-label" for="same-address">Broken</label>
+          </div>
+
+          <hr class="mb-4">
+
+          <div class="row">
+            <div class="col-md-6">
+              <button class="btn btn-outline-secondary btn-lg btn-block" type="submit">Reset</button>
+            </div>
+            <div class="col-md-6">
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Send</button>
+            </div>
+          </div>
+
+
+        </form>
+      </div>
+    </div>
+
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+      <p class="mb-1">&copy; 2021 Hahn-Softwareentwicklung</p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+      </ul>
+    </footer>
+  </div>
+
 </template>
