--- a/Hahn.ApplicationProcess.February2021.Frontend/src/app.html
+++ b/Hahn.ApplicationProcess.February2021.Frontend/src/app.html
@@ -1,5 +1,11 @@
 <template>
 
+  <style>
+    .form-control-error {
+      border: 2px solid red;
+    }
+  </style>
+
   <div class="container">
     <div class="py-5 text-center">
       <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.6/assets/brand/bootstrap-solid.svg" alt=""
@@ -28,43 +34,54 @@
 
       <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Create Asset</h4>
-        <form class="needs-validation" novalidate submit.delegate="postdata()" autocomplete="off">
+        <form class="needs-validation" novalidate submit.delegate="submit()" autocomplete="off">
           <div class="row">
             <div class="col-md-6 mb-3">
-              <label for="firstName">Asset name</label>
-              <input type="text" class="form-control" id="txtAssetName" placeholder="Name of Asset"
-                value.bind="assetName" autocomplete="off">
+              <div class="form-group">
+                <label for="txtAssetName">Asset name</label>
+                <input type="text" class="form-control" id="txtAssetName" placeholder="Name of Asset"
+                  value.bind="assetName & validate:rules" autocomplete="off">
+
+              </div>
             </div>
             <div class="col-md-6 mb-3">
-              <label for="ddlDepartment">Department</label>
-              <select class="custom-select d-block w-100" id="ddlDepartment" value.bind="department">
-                <option value="">Choose...</option>
-                <option value="HQ">HQ</option>
-                <option value="Store1">Store1</option>
-                <option value="Store2">Store2</option>
-                <option value="Store3">Store3</option>
-                <option value="MaintenanceStation">MaintenanceStation</option>
-              </select>
+              <div class="form-group">
+                <label for="ddlDepartment">Department</label>
+                <select class="custom-select d-block w-100" id="ddlDepartment" value.bind="department & validate:rules">
+                  <option value="">Choose...</option>
+                  <option value="HQ">HQ</option>
+                  <option value="Store1">Store1</option>
+                  <option value="Store2">Store2</option>
+                  <option value="Store3">Store3</option>
+                  <option value="MaintenanceStation">MaintenanceStation</option>
+                </select>
+              </div>
             </div>
           </div>
 
           <div class="mb-3">
-            <label for="txtDepartmentEmail">Department Email</label>
-            <input type="text" class="form-control" id="txtDepartmentEmail" placeholder="you@example.com"
-              value.bind="eMailAdressOfDepartment" autocomplete="off">
+            <div class="form-group">
+              <label for="txtDepartmentEmail">Department Email</label>
+              <input type="text" class="form-control" id="txtDepartmentEmail" placeholder="you@example.com"
+                value.bind="eMailAdressOfDepartment & validate:rules" autocomplete="off">
+            </div>
           </div>
 
           <div class="row">
             <div class="col-md-6 mb-3">
-              <label for="txtDepartmentCountry">Department Country</label>
-              <input type="text" class="form-control" id="txtDepartmentCountry" placeholder="Pakistan"
-                value.bind="countryOfDepartment" autocomplete="off">
+              <div class="form-group">
+                <label for="txtDepartmentCountry">Department Country</label>
+                <input type="text" class="form-control" id="txtDepartmentCountry" placeholder="Pakistan"
+                  value.bind="countryOfDepartment & validate:rules" autocomplete="off">
+              </div>
             </div>
 
             <div class="col-md-6 mb-3">
-              <label for="txtPurchaseDate">PurchaseDate</label>
-              <input type="date" class="form-control" id="txtPurchaseDate" placeholder="Purchase Date"
-                value.bind="purchaseDate" autocomplete="off">
+              <div class="form-group">
+                <label for="txtPurchaseDate">PurchaseDate</label>
+                <input type="date" class="form-control" id="txtPurchaseDate" placeholder="Purchase Date"
+                  value.bind="purchaseDate & validate:rules" autocomplete="off">
+              </div>
             </div>
           </div>
 
@@ -75,6 +92,7 @@
             <label class="custom-control-label" for="same-address">Broken</label>
           </div>
 
+
           <hr class="mb-4">
 
           <div class="row">
@@ -83,7 +101,8 @@
                 disabled.bind="disableResetButton">Reset</button>
             </div>
             <div class="col-md-6">
-              <button class="btn btn-primary btn-lg btn-block" type="submit" disabled.bind="disableSendButton">Send</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit"
+                disabled.bind="controller.errors.length > 0">Send</button>
             </div>
           </div>
 
